fixed COPYRIGHT so that it does not overlap in SLS+STTG max-width:425px

--- a/Styles/settings.css
+++ b/Styles/settings.css
@@ -1,6 +1,6 @@
 .settings-holder{
      position: fixed;
-     top: 50px;
+     top: 70px;
      left: 0;
      right: 0;
      bottom: 0;
