--- a/Styles/song-list-section.css
+++ b/Styles/song-list-section.css
@@ -1,6 +1,6 @@
 .list-holder{
      position: fixed;
-     top: 50px;
+     top: 70px;
      left: 0;
      right: 0;
      bottom: 0;
